# crew-agents

./: .python-version
miata_bot/: README.md  crew_experiments.ipynb  flow_experiments.ipynb  pyproject.toml
miata_bot/src/miata_bot/: crew.py  main.py
miata_bot/src/miata_bot/config/: agents.yaml  tasks.yaml
