[project]
name = "miata_bot"
version = "0.1.0"
description = "miata-bot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
miata_bot = "miata_bot.main:run"
run_crew = "miata_bot.main:run"
train = "miata_bot.main:train"
replay = "miata_bot.main:replay"
test = "miata_bot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
